# translate-cypriot

./: README.md  bert.py  bert_eval.py  bert_plot.py  bert_plot2.py  create_ds.py  finetune.py  main.py  pyproject.toml
