[project]
name = "translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bitsandbytes>=0.49.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "torch>=2.11.0",
    "transformers>=5.4.0",
    "trl>=0.29.1",
]
